--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,6 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.wdullaer:materialdatetimepicker:2.3.0'
     compile 'me.drakeet.materialdialog:library:1.3.1'
+    compile 'com.yarolegovich:lovely-dialog:1.0.4'
+    compile 'com.miguelcatalan:materialsearchview:1.4.0'
 }
