--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
             android:name=".Settings.SettingActivity">
         </activity>
         <activity
+            android:name=".SearchActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
             android:name=".AddActivity"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
