增加了闹钟
SQLite数据库增删改已完成，新增了闹钟功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,10 @@
             android:name=".DetailsActivity"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
+        <activity
+            android:name=".Alarm.AlarmActivity">
+        </activity>
+        <receiver android:name=".Alarm.AlarmReceiver" android:process=":remote" />
     </application>
 
 </manifest>
