--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 29
+    buildToolsVersion "29.0.1"
 
     defaultConfig {
         applicationId "com.susyxu.susytodo"
-        minSdkVersion 16
-        targetSdkVersion 23
+        minSdkVersion 21
+        targetSdkVersion 29
         versionCode 1
         versionName "1.3"
     }
@@ -20,12 +20,12 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
-    compile 'com.wdullaer:materialdatetimepicker:2.3.0'
-    compile 'me.drakeet.materialdialog:library:1.3.1'
-    compile 'com.yarolegovich:lovely-dialog:1.0.4'
-    compile 'com.miguelcatalan:materialsearchview:1.4.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    testImplementation 'junit:junit:4.12'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.wdullaer:materialdatetimepicker:2.3.0'
+    implementation 'me.drakeet.materialdialog:library:1.3.1'
+    implementation 'com.yarolegovich:lovely-dialog:1.0.4'
+    implementation 'com.miguelcatalan:materialsearchview:1.4.0'
 }
